...
                    ref
                        .read(globalErrorProvider.notifier)
                        .showError('테마 시작 오류: ${errorText(e)}');
                  }
                },
                child: const Text(
                  'Start',
                  style: TextStyle(color: Colors.white),
                ),
              ),
              ElevatedButton.icon(
                style: ElevatedButton.styleFrom(
                  backgroundColor: AppColors.danger,
...
                    ref
                        .read(globalErrorProvider.notifier)
                        .showError('비상 정지 실패: ${errorText(e)}');
                  }
                },
                child: const Text(
                  'Emergency',
                  style: TextStyle(color: Colors.white),
                ),
              ),
              ElevatedButton(
                style: ElevatedButton.styleFrom(
                  backgroundColor: AppColors.darkGrey,
...
                      builder: (context) =>
                          const atmos_exhibition.SpeakerCanvasScreen(),
                    ),
                  );
                },
                child: const Text(
                  'Speaker Layout',
                  style: TextStyle(color: Colors.white),
                ),
              ),
            ],
          ),
          Consumer(
...
